feat(genesis block + blacklist): add blacklist to clientLibrary.
Also refactored genesis block loading